--- a/app.json
+++ b/app.json
@@ -2,13 +2,49 @@
   "pages": [
     "pages/index/index",
     "pages/logs/logs",
-    "pages/goods/goods"
+    "pages/goods/goods",
+    "pages/my/my",
+    "pages/cart/cart",
+    "pages/order/order",
+    "pages/detail/detail"
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "Weixin",
     "navigationBarTextStyle": "black"
+  },
+  "tabBar": {
+    "list": [
+      {
+        "pagePath": "pages/index/index",
+        "text": "首页",
+        "iconPath": "images/home.png",
+        "selectedlconPath": "images/home-select.png"
+      },
+      {
+        "pagePath": "pages/my/my",
+        "text": "我的",
+        "iconPath": "images/my.png",
+        "selectedlconPath": "images/my-select.png"
+      },
+      {
+        "pagePath": "pages/cart/cart",
+        "text": "购物车",
+        "iconPath": "images/shopcart.png",
+        "selectedlconPath": "images/shopcart-select.png"
+      },
+      {
+        "pagePath": "pages/order/order",
+        "text": "订单",
+        "iconPath": "images/order.png",
+        "selectedlconPath": "images/order-select.png"
+      },
+      {
+        "pagePath": "pages/goods/goods",
+        "text": "练习"
+      }
+    ]
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json"
